syntax = "proto3";

package user;
option go_package = "pb";

service User {
  rpc AuthUser(AuthUserRequest) returns (AuthUserResponse) {};
}

message AuthUserRequest { string user = 1; }

message AuthUserResponse { bool authed = 1; }